# discord-music-bot

./: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/: README.md  main.py  pyproject.toml
backend/discord_music_bot/: __init__.py  api.py  bot.py  config.py  music.py
discord_music_bot/: bot.py  config.py  music.py
frontend/: .env.example  package.json
frontend/src/: env.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/: control-panel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
frontend/src/server/api/: root.ts
frontend/src/server/api/routers/: control.ts
frontend/src/styles/: globals.css
